[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/tooltip/tooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://planet/moon-controller.gd" type="Script" id=2]
[ext_resource path="res://planet/moon.gd" type="Script" id=3]
[ext_resource path="res://planet/textures/spherify.tres" type="Shader" id=4]
[ext_resource path="res://planet/textures/moon.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/aspect_ratio = 2.0
shader_param/rotation_speed = 0.01
shader_param/as_shadow = false

[sub_resource type="CircleShape2D" id=2]
radius = 512.0

[sub_resource type="CircleShape2D" id=3]
radius = 768.0

[node name="Moon" type="Node2D"]
z_index = -2
script = ExtResource( 2 )

[node name="Body" type="Area2D" parent="." groups=["radar_objects"]]
z_index = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Body"]
material = SubResource( 1 )
scale = Vector2( 0.5, 1 )
z_index = -1
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 2 )

[node name="GravityField" type="Area2D" parent="Body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/GravityField"]
shape = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="Body"]

[node name="ToolTip" parent="Body/UI" instance=ExtResource( 1 )]

[connection signal="mouse_entered" from="Body" to="." method="_on_Body_mouse_entered"]
[connection signal="mouse_exited" from="Body" to="." method="_on_Body_mouse_exited"]
